# Gicungduoc

./: .gitignore  CLAUDE.md  FPT-AI-FACTORY-INTEGRATION.md  README.md  docker-compose.yml
.claude/commands/: hackathon-code.md  hackathon-pitch.md  hackathon-start.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  ai.py  chat.py  health.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  database.py  fpt_ai.py
desktop/: index.html  package.json
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: AI-HELPER.md  ARCHITECTURE.md  BRANCHES.md  CONTRIBUTING.md  DEPLOYMENT.md  PRE-HACKATHON.md  README.md  RESOURCES.md  SETUP.md  TOOLS.md  TROUBLESHOOTING.md  pitch-deck.md
docs/api/: endpoints.md
docs/demo/: demo-script.md  pitch-deck.md
docs/design/: design-system.md
frontend/: .env.example  Dockerfile  package.json  tailwind.config.js  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: ai-chat.tsx
frontend/src/lib/: api.ts
mobile/: App.tsx  app.json  package.json
scripts/: commit.sh  deploy.sh  setup.sh  test-api.sh
shared/: design-tokens.ts
shared/types/: api.ts
